chore: remove dependency from apache commons-io